<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
          https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>fadeout.software.wasdi</groupId>
        <artifactId>wasdi-parent</artifactId>
        <version>${revision}</version>
    </parent>

    <groupId>it.fadeout.rest</groupId>
    <artifactId>wasdiwebserver</artifactId>
    <name>wasdiwebserver</name>
    <version>${revision}</version>
    <packaging>war</packaging>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <revision>1.0</revision>
        <sVersionCommonsIo>2.18.0</sVersionCommonsIo>
        <sVersionCommonsLang3>3.17.0</sVersionCommonsLang3>
        <sVersionCommonsNet>3.11.1</sVersionCommonsNet>
        <sVersionFlattenMavenPlugin>1.5.0</sVersionFlattenMavenPlugin>
        <sVersionGoogleApiClient>2.2.0</sVersionGoogleApiClient>
        <sVersionHttpClient>4.5.14</sVersionHttpClient>
        <sVersionJackson>2.18.2</sVersionJackson>
        <sVersionJavaApiForKml>2.2.1</sVersionJavaApiForKml>
        <sVersionJavaxWebsocketApi>1.1</sVersionJavaxWebsocketApi>
        <sVersionJson>20240303</sVersionJson>
        <sVersionJunit>4.13.1</sVersionJunit>
        <sVersionMavenCompilerPlugin>3.11.0</sVersionMavenCompilerPlugin>
        <sVersionMavenWarPlugin>3.4.0</sVersionMavenWarPlugin>
        <sVersionOrbit>1.0.1</sVersionOrbit>
        <sVersionJersey2>2.45</sVersionJersey2>
        <sVersionServletApi>2.5</sVersionServletApi>
        <sVersionStripeJava>22.0.0</sVersionStripeJava>
    </properties>

    <build>
        <finalName>wasdiwebserver</finalName>
        <sourceDirectory>src/main/java</sourceDirectory>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${sVersionFlattenMavenPlugin}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-war-plugin</artifactId>
                <version>${sVersionMavenWarPlugin}</version>
                <configuration>
                    <warSourceDirectory>WebContent</warSourceDirectory>
                    <failOnMissingWebXml>true</failOnMissingWebXml>
                    <webXml>${sWasdiWebServerWarXmlFile}</webXml>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${sVersionMavenCompilerPlugin}</version>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.glassfish.jersey/jersey-bom -->
        <dependency>
            <groupId>org.glassfish.jersey</groupId>
            <artifactId>jersey-bom</artifactId>
            <version>${sVersionJersey2}</version>
            <type>pom</type>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-servlet -->
        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-servlet</artifactId>
            <version>${sVersionJersey2}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-moxy -->
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-moxy</artifactId>
            <version>${sVersionJersey2}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson -->
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-json-jackson</artifactId>
            <version>${sVersionJersey2}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-multipart -->
        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-multipart</artifactId>
            <version>${sVersionJersey2}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-jaxb -->
		<dependency>
		    <groupId>org.glassfish.jersey.media</groupId>
		    <artifactId>jersey-media-jaxb</artifactId>
		    <version>${sVersionJersey2}</version>
		</dependency>
        <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.inject/jersey-hk2 -->
        <dependency>
            <groupId>org.glassfish.jersey.inject</groupId>
            <artifactId>jersey-hk2</artifactId>
            <version>${sVersionJersey2}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${sVersionJunit}</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>${sVersionServletApi}</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>${sVersionHttpClient}</version>
        </dependency>        
        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider -->
        <dependency>
            <groupId>com.fasterxml.jackson.jaxrs</groupId>
            <artifactId>jackson-jaxrs-json-provider</artifactId>
            <version>${sVersionJackson}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${sVersionJackson}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${sVersionCommonsIo}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/javax.websocket/javax.websocket-api -->
        <dependency>
            <groupId>javax.websocket</groupId>
            <artifactId>javax.websocket-api</artifactId>
            <version>${sVersionJavaxWebsocketApi}</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/de.micromata.jak/JavaAPIforKml -->
        <dependency>
            <groupId>de.micromata.jak</groupId>
            <artifactId>JavaAPIforKml</artifactId>
            <version>${sVersionJavaApiForKml}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
        <dependency>
            <groupId>com.stripe</groupId>
            <artifactId>stripe-java</artifactId>
            <version>${sVersionStripeJava}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.json/json -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>${sVersionJson}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${sVersionCommonsLang3}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>${sVersionCommonsNet}</version>
        </dependency>
        <!-- WASDI's REPOSITORY OR LOCAL BUILD -->
        <dependency>
            <groupId>org.nfs.orbits</groupId>
            <artifactId>orbit</artifactId>
            <version>${sVersionOrbit}</version>
        </dependency>

        <!-- WASDI's REPOSITORY OR LOCAL BUILD -->
        <dependency>
            <groupId>fadeout.software.wasdi</groupId>
            <artifactId>wasdishared</artifactId>
            <version>${revision}</version>
        </dependency>
    </dependencies>
</project>
